[package]
name = "libsecp256k1"
description = "Pure Rust secp256k1 implementation."
license = "Apache-2.0"
version = "0.7.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/paritytech/libsecp256k1"
keywords = ["crypto", "ECDSA", "secp256k1", "bitcoin", "no_std"]
edition = "2018"
resolver = "2"

[dependencies]
libsecp256k1-core = { version = "0.3.0", path = "core", default-features = false }
arrayref = "0.3"
rand = { version = "0.8", default-features = false }
digest = "0.9"
base64 = { version = "0.13", default-features = false }
hmac-drbg = { version = "0.3", optional = true }
sha2 = { version = "0.9", optional = true, default-features = false }
typenum = { version = "1.12", optional = true }
serde = { version = "1.0.104", features = ["derive"], default-features = false }
lazy_static = { version = "1.4.0", optional = true }